Created activity 2 and called it ScreenTwo

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ScreenTwo"
+            android:label="@string/title_activity_screen_two"
+            android:parentActivityName=".ScreenOne" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="edu.drake.softwareengineering.donutsapp.ScreenOne" />
+        </activity>
     </application>
 
 </manifest>
